# primo

./: README.md
browser/firefox/: manifest.json  primo.js
control-center/: CMakeLists.txt  README  primo-control-center.pro  primo-control-center.qml  primo-control-center.qrc  primo.control.center.json
control-center/src/: db.cpp  db.h  difficulty.cpp  difficulty.h  event-filter.cpp  event-filter.h  executor.cpp  executor.h  main.cpp  miner.cpp  miner.h  model.cpp  model.h  native-messaging-handler.cpp  native-messaging-handler.h  signature.cpp  signature.h
control-center/src/epee/src/: mlog.cpp
control-center/ui/: AboutWindow.qml  ToolTip.qml
webserver/apache/: 12.primo.conf  README  mod_primo.c
